# kasumi-next

./: .env  .gitignore  LICENSE  README.md  bot.py  pyproject.toml
plugins/bang_avatar/: __init__.py  config.py  downloader.py  initialize.py  models.py  render.py  utils.py
plugins/blackjack/: __init__.py  database.py  game_service.py  handlers.py  instruction.md  messages.py  models.py  render.py  session.py  stats_service.py  utils.py
plugins/cck/: __init__.py  card.py  character_data.json  config.py  downloader.py  draw.py  image_cut_settings.json  store.py
plugins/channels/: README.md  __init__.py  data_source.py
plugins/daily/: __init__.py  utils.py
plugins/daily_task/: __init__.py  database.py  models.py  service.py  tasks.json
plugins/guess_chart/: __init__.py  config.py  kanji_mapping_table.txt  nickname_song.csv  store.py  utils.py
plugins/help/: README.md  __init__.py
plugins/info/: __init__.py
plugins/mailbox/: README.md  __init__.py  database.py  models.py  scheduled_service.py  service.py
plugins/mines/: __init__.py  database.py  messages.py  models.py  session.py  stats_service.py
plugins/monetary/: README.md  __init__.py  data_source.py  database.py  level_service.py  migration.py  models.py  monetary.py  ranking_service.py  star_sticker_service.py  transaction.py  transaction_service.py  user_service.py  utils.py
plugins/nickname/: README.md  __init__.py  data_source.py  nickname.py
plugins/one_stroke/: __init__.py  database.py  difficulty.py  graph_generator.py  messages.py  models.py  session.py
plugins/passive_manager/: __init__.py  manager.py
plugins/red_envelope/: __init__.py  database.py  messages.py  migration.py  models.py  service.py
plugins/render_service/: __init__.py  primitives.py
plugins/vits/: __init__.py  (+3 more)
scripts/: README_rollback.md  fetch_character_birthdays.py  rollback_monetary_data.py
utils/: README.md  __init__.py  birthday.py  character_birthdays.json  error_handler.py  passive_generator.py
(+23 files in other folders)
