[project]
name = "kasumi-next"
version = "0.1.0"
description = "一个「キラキラドキドキ」的 BanGDream! 小游戏机器人"
authors = [
    {name = "Kasumi-Games", email = "2667292003@qq.com"},
]
dependencies = [
    "nonebot2[aiohttp]>=2.3.1",
    "nonebot-adapter-satori>=0.11.5",
    "nonebot-plugin-waiter>=0.6.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
